objects/nFORMS__Form_Template__c.object
<CustomObject>
    <fields>
        <fullName>nFORMS__Description__c</fullName>
        <description>This field is manually populated. It is optional, but recommended. This field is used to provide users with a description of the form template, so the user knows which form template to use in what situation.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORMS__Enforce_Masking__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is manually selected. It is used to control whether the output form displays fields masked using Field Extensions in the clear. When true, masking will be used, when false, fields masked using Field Extensions will display in the clear. By default, it is true.</description>
        <label>Enforce Masking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORMS__Filter__c</fullName>
        <description>This field is manually populated. It is optional. It is used to specify criteria that must be met by a record for the form template to be available for Form Generation.</description>
        <inlineHelpText>The form template will only be available to objects that meet this filter criteria.</inlineHelpText>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORMS__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. It allows the user to select whether a Form Template is available to users. When true, the form template is available, when false, it is not available. By default, it is false.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORMS__Output_Type__c</fullName>
        <description>This field is manually selected. It is required. This field specifies whether the generated form should be output in docx or pdf format.</description>
        <label>Output Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORMS__Primary_Object__c</fullName>
        <description>This field is manually populated. It is required. This field is used to specify the object this form template is used for.</description>
        <label>Primary Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORMS__Save_To_Docman__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. It allows the user to specify whether the Form generated should be saved to document manager. When true, it is saved to document manager, when false it is not. By default, it is false.</description>
        <label>Save To Docman</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORMS__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Form Template</label>
    <listViews>
        <fullName>nFORMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>